--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,5 +1,3 @@
-
-
 /* Global container for layout */
 .container {
     display: flex;
@@ -471,7 +469,7 @@ nav a:hover {
 }
 
 .section-heading {
-    font-size: 24px;
+    font-size: 20px;
     margin-bottom: 20px;
     color: #990000; /* Set the text color to your main color */
 }
@@ -503,7 +501,51 @@ nav a:hover {
 .appointment-table tbody tr:hover {
     background-color: #e0e0e0;
 }
+.tab {
+    overflow: hidden;
+}
 
+.tab button {
+    background-color: #f2f2f2;
+    float: left;
+    border: 1px solid #ccc;
+    outline: none;
+    cursor: pointer;
+    padding: 10px 20px;
+    transition: 0.3s;
+}
+
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 20px;
+}
+       /* Style the Date Filter */
+       .date-filter {
+        margin-top: 20px;
+    }
+
+    /* Style the pagination buttons */
+    .pagination {
+        margin-top: 20px;
+    }
+
+    .pagination button {
+        background-color: #f2f2f2;
+        border: 1px solid #ccc;
+        outline: none;
+        cursor: pointer;
+        padding: 10px 15px;
+        transition: 0.3s;
+    }
+
+    .pagination button:hover {
+        background-color: #ddd;
+    }
 /* Styles for Appointment */
 
 /* Chat Support styles */
@@ -597,3 +639,5 @@ nav a:hover {
 .send-button:hover {
     background-color: #0056b3;
 }
+/* Chat Support styles */
+
