--- a/public/css/account.css
+++ b/public/css/account.css
@@ -20,7 +20,7 @@ body {
   .login-card-img {
     border-radius: 0;
     position: absolute;
-    width: 100%;
+    width: 115%;
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover; 
@@ -57,7 +57,7 @@ body {
       color: #919aa3; }
   .login-card .login-btn {
     padding: 13px 20px 12px;
-    background-color: #a20202;;
+    background-color: #a20202;
     border-radius: 4px;
     font-size: 17px;
     font-weight: bold;
@@ -146,15 +146,14 @@ width: 10px;
 
 .btn-block {
   width: 100%;
+  background-color:#a20202;
+  color: white;
+  font-size: 17px;
 }
 
-.button-color {
-  background-color: #E57373;
-  color: white;
-}
 
 .btn-block:hover {
-  background-color: #d14d4d;
+  background-color: #c71b1b;
 }
 
 .button-color:hover {
@@ -167,5 +166,30 @@ width: 10px;
     margin-bottom: 10px;
   }
 }
+.btn-register {
+  background-color: #a20202;
+  color: white; 
+  border: none; 
+  padding: 10px 20px; 
+  border-radius: 5px; 
+  padding: 15px 20px 15px 20px;
+  font-weight: 500;
+  font-size: 17px;
+}
 
 
+.btn-register:hover {
+  background-color: transparent;
+  color: black;
+  border: #000 solid 1px;
+  transform: scale(1.05); 
+}
+
+
+.btn-register:active {
+  opacity: 0.75;
+}
+
+.login-card-footer-text {
+  margin: 15px 0; 
+}
